<resources>
    <string name="app_name">Scheduler</string>
    <string name="welcome">Welcome to Scheduler</string>
    <string name="start">Start Schedule</string>
    <string name="sign_in">Sign in</string>
    <string name="people">People</string>
    <string name="shifts">Shifts</string>
    <string name="next">➡</string>
    <string name="previous">⬅</string>
    <string name="schedule">Schedule</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="section">Section</string>
    <string name="admin">管理员 /Admin</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>

    <string-array name="sections">
        <item>微生物组 /Microbiology</item>
        <item>免疫组 /Immunology</item>
        <item>分子生物组 /Molecular Biology</item>
        <item>生化组 /Biochemistry</item>
        <item>血库组 /Supplement Blood Bank</item>
        <item>检验组 /Laboratory Medical Test</item>
        <item>样本处理组 /Sample Processing</item>
    </string-array>
    
    <string-array name="Admin">
        <item>是 /Yes</item>
        <item>否 /No</item>
    </string-array>
</resources>